<resources>
    <string name="app_name">MADESU</string>
    <string name="nav_user">Usuario</string>
    <string name="nav_deuda">Deuda</string>
    <string name="nav_comprar">Comprar</string>
    <string name="nav_list">Lista</string>
    <string name="nav_dinero">Dinero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
